log
Thu 16 May 2024 08:06:25 PM UTC: 
 tests:  0|5
total_score: 0/70
a0e1e62
Thu 16 May 2024 08:25:36 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: statement with no effect [-Werror=unused-value]
   59 |                n->sudo[i][k];
      |                ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2c025a2
Thu 16 May 2024 08:26:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9aba1b
Thu 16 May 2024 08:29:12 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
b7267d8
